# Modern-Cpp-Basics

./: README.md
01-Intro/: .clang-format  README.md
02-Basics/: README.md
03-Containers/: README.md
04-Ranges & Algorithms/: Answer.md  README.md
04-Ranges & Algorithms/examples/: 01-keys.cpp  02-zip.cpp  03-split.cpp  04-caching.cpp  05-transform.cpp  06-to.cpp  07-functional.cpp
05-Lifetime & Type Safety/: Answer.md  README.md
06-Programming in Multiple Files/: Answer.md  README.md
06-Programming in Multiple Files/code/: xmake.lua
06-Programming in Multiple Files/modules/: CMakeLists.txt  xmake.lua
06-Programming in Multiple Files/modules/module-test/: CMakeLists.txt  xmake.lua
06-Programming in Multiple Files/modules/module-test-20/: CMakeLists.txt  xmake.lua
06-Programming in Multiple Files/modules/module-test-20/global-fragment/: Old.cpp  Old.h  Person.cpp  Person.mpp
06-Programming in Multiple Files/modules/module-test-20/header-unit/: Person.cpp  Person.mpp  main.cpp
06-Programming in Multiple Files/modules/module-test-20/partition/: Person-Order.mpp  Person-Utils.mpp  Person.mpp  main.cpp
06-Programming in Multiple Files/modules/module-test-20/private-fragment/: Person.mpp  main.cpp
06-Programming in Multiple Files/modules/module-test-20/simple/: Customer.mpp  Person.mpp  main.cpp
06-Programming in Multiple Files/modules/module-test-20/split-impl/: Person-Funcs.cpp  Person.cpp  main.cpp
06-Programming in Multiple Files/modules/module-test/global-fragment/: Person.cpp  README.md
06-Programming in Multiple Files/modules/module-test/header-unit/: Old.h  Person.cpp  Person.mpp  README.md  main.cpp
06-Programming in Multiple Files/modules/module-test/partition/: Person-Order.mpp  Person-Utils.mpp  Person.cpp  Person.mpp  README.md  main.cpp
06-Programming in Multiple Files/modules/module-test/private-fragment/: Person.mpp  README.md  main.cpp
06-Programming in Multiple Files/modules/module-test/simple/: Customer.mpp  Person.mpp  main.cpp
06-Programming in Multiple Files/modules/module-test/split-impl/: Person-Funcs.cpp  README.md  main.cpp
07-Error Handling/: Answer.md  README.md
07-Error Handling/code/: copy-and-swap idiom.cpp  expected.cpp  optional.cpp  xmake.lua
08-String & Stream/: Answer.md  README.md
08-String & Stream/code/: Decompose.cpp  Profile.cpp  RegexTest.cpp  xmake.lua
08-String & Stream/example/: xmake.lua
09-Move Semantics Basics/: Answer.md  README.md
09-Move Semantics Basics/code/: MyIntVector-sac.h  MyIntVector.h
10-Value Category and Move Semantics/: Answer.md  README.md
10-Value Category and Move Semantics/code/: RVO and NRVO.cpp
11-Template Basics and Move Semantics/: Answer.md  README.md
12-Advanced Template/: Answer.md  README.md
12-Advanced Template/Answer-code/: FixedString.cpp  Function-SBO.cpp  Function.cpp  Invoke.cpp  PushBackGuard.cpp
12-Advanced Template/code/: Lazy.cpp  NTTP.cpp
13-Multithreading/: Answer.md  README.md
13-Multithreading/Answer-code/: Thread.cpp  ThreadGroup.cpp  ThreadSafeQueue1.hpp  ThreadSafeQueue1.test.cpp  ThreadSafeQueue2.hpp  (+2 more)
14-Advanced Concurrency/: Answer.md  README.md
15-Memory Management/: Answer.md  README.md
16-Supplementary and Summary/: Answer.md  README.md
(+81 files in other folders)
